# terra

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  imgui.ini  main  measure.py  result.cpp
.cache/clangd/index/: _fixes.hpp.1980E0AE3B596256.idx  _vectorize.hpp.F26B19975F3068B2.idx  ansicolor_sink-inl.h.A94235C658FC94C6.idx  ansicolor_sink.h.F0BE035102CEB5B4.idx  application.cpp.C9C68544EAC4DA08.idx  application.h.F4D548B2D88F6102.idx  application_event.h.9AC7F22C369B0BCE.idx  assert.h.EFD7267E171C6326.idx  async.cpp.FDFC0C4CEE879E05.idx  async.h.45FEDF4CEC072774.idx  async_logger-inl.h.E2763AFAD2A94D9E.idx  async_logger.h.C5E20CE0ACDDE33F.idx  backtracer-inl.h.5019176093F28E72.idx  backtracer.h.FE669F0BED631CE2.idx  base.h.1E784ABB76E10FB7.idx  base.h.F66950FE05F1BB36.idx  base_sink-inl.h.45369ACCAF8D22DC.idx  base_sink.h.77EC503FE725A14B.idx  basic_file_sink-inl.h.F39458D7715C0BAE.idx  basic_file_sink.h.8203AD1B415AACFB.idx  build.cpp.07E7F2FF18232C5D.idx  bundled_fmtlib_format.cpp.10E81F399986C449.idx  cfg.cpp.69A9E78119ACBEC9.idx  chrono.h.F2FD6D500776C8F5.idx  circular_q.h.F2AED177FD042D79.idx  cocoa_init.m.4AE513E1F90515D0.idx  cocoa_joystick.h.981248931DAC36EB.idx  cocoa_joystick.m.3C2DD8A529D539EA.idx  cocoa_monitor.m.328D2B27426F12D6.idx  cocoa_platform.h.9AED88D4233A1D8F.idx  cocoa_time.c.A01EDD5CAA6B9046.idx  cocoa_time.h.24CB312F628AF186.idx  cocoa_window.m.4FD9B63C5A457D11.idx  color_sinks.cpp.AD9AD5B7A8FAA30C.idx  command_queue.cpp.F928C2F376260156.idx  command_queue.h.77CD93B4B143BC47.idx  common-inl.h.98A3AD220D7AB3D0.idx  common.h.A439191AFA8F459B.idx  common.hpp.0351199687BB4D3A.idx  compute_common.hpp.7DAEF3B52383B2D0.idx  (+314 more)
editor/: CMakeLists.txt
engine/: CMakeLists.txt
engine/assets/objects/: pyramid.txt  webgpu.txt
engine/assets/shaders/: shader.wgsl
engine/docs/: MATERIAL_SYSTEM.md
engine/examples/: material_usage_example.cpp
engine/include/: terra.h  terrapch.h
engine/include/terra/: terra.h
engine/include/terra/core/: application.h  assert.h  base.h  context.h  entry_point.h  layer.h  layer_stack.h  logger.h  macros.h  platform_detection.h  timer.h  timestep.h  types.h  window.h
engine/include/terra/core/context/: command_queue.h  context.h  context_utils.h  macros.h
engine/include/terra/core/utils/: webgpu_utils.h
engine/include/terra/debug/: profiler.h
engine/include/terra/events/: application_event.h  event.h  key_event.h  mouse_event.h
engine/include/terra/helpers/: error.h  string.h  user_data.h  webgpu_fmt_formatters.h
engine/include/terra/input/: input.h  key_codes.h  mouse_codes.h
engine/include/terra/platform/macos/: window.h
engine/include/terra/renderer/: buffer.h  camera.h  context.h  format.h  material.h  material_instance.h  material_manager.h  mesh.h  orthographic_camera.h  perspective_camera.h  pipeline.h  pipeline_specification.h  render_pass.h  render_queue.h  renderer.h  renderer_api.h  renderer_command.h  shader.h
engine/include/terra/resources/: resource_manager.h
engine/include/terra/ui/: imgui_layer.h
engine/src/: terra.cpp
engine/src/core/: application.cpp  context.cpp  layer_stack.cpp  logger.cpp  timer.cpp  window.cpp
engine/src/core/context/: command_queue.cpp  context.cpp  context_utils.cpp
engine/src/platform/macos/: input.cpp  window.cpp
engine/src/renderer/: buffer.cpp  context.cpp  material.cpp  material_instance.cpp  material_manager.cpp  mesh.cpp  orthographic_camera.cpp  perspective_camera.cpp  pipeline.cpp  render_pass.cpp  render_queue.cpp  renderer.cpp  renderer_api.cpp  renderer_command.cpp  shader.cpp
engine/src/resources/: resource_manager.cpp
engine/src/ui/: build.cpp  imgui_layer.cpp
game/: CMakeLists.txt
game/src/: layer.cpp  layer.h  main.cpp
tools/: config.py  fmtgen.py
